@@ -69,8 +69,8 @@ int stream_open(dev_file_t *f) {
     f->handle = open(f->name, osflags, osshare);
     if (f->handle < 0 && gsb_bas_dir[0]) {
       char file[OS_PATHNAME_SIZE];
-      strcpy(file, gsb_bas_dir);
-      strcat(file, f->name);
+      strlcpy(file, gsb_bas_dir, sizeof(file));
+      strlcat(file, f->name, sizeof(file));
       f->handle = open(file, osflags, osshare);
     }
   }
