@@ -1,3 +1,6 @@
+2017-11-28 (0.12.10)
+	COMMON: Fix some coverty warnings
+
 2017-11-17 (0.12.10)
 	SDL: Fix debugger display issue
 
